feat(menu): menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "**/CVS": true,
         "**/__pycache__": true,
         "**/.mypy_cache": true
-    }
+    },
+    "cSpell.words": [
+        "pymenu"
+    ],
 }
