--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
     },
     "cSpell.words": [
         "isnumeric",
-        "pymenu"
+        "pymenu",
+        "termcolor"
     ],
+    "python.linting.flake8Enabled": false,
+    "python.linting.mypyEnabled": true,
+    "python.linting.enabled": true,
 }
