--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "**/.mypy_cache": true
     },
     "cSpell.words": [
+        "getch",
         "isnumeric",
         "pymenu",
         "termcolor"
